--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <!-- imagen pestaña -->
-    <link rel="icon" href="./img/4-sin-fondo.jpg">
+    <link rel="icon" href="./img/sin fondo.png">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
           <div class="nav-title">
-            <img src="./img/4-sin-fondo.jpg" alt="Logo" width="100">
+            <img src="./img/sin fondo.png" alt="Logo" width="120">
           </div>
         </div>
         <div class="nav-btn">
@@ -33,7 +33,7 @@
         </div>
 <div class="navLinks">
 <a href="#" id="active">Inicio</a>
-<a href="./imagenes.html">Imagenes</a>
+<a href="./imagenes.html">Imágenes</a>
 <a href="./Informacion.html">Información</a>
 <a href="./contacto.html">Contacto</a>
 </div>
