--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <header class="nav">
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
-          <div class="nav-title">
+        <div class="nav-title">
             <img src="./img/sin fondo.png" alt="Logo" width="120">
-          </div>
+        </div>
         </div>
         <div class="nav-btn">
-          <label for="nav-check">
+        <label for="nav-check">
             <span></span>
             <span></span>
             <span></span>
-          </label>
+        </label>
         </div>
 <div class="navLinks">
 <a href="#" id="active">Inicio</a>
@@ -38,6 +38,9 @@
 <a href="./contacto.html">Contacto</a>
 </div>
 
+<div class="banner-img">
+    
+</div>
 
     </header>
 
