--- a/index.html
+++ b/index.html
@@ -16,33 +16,34 @@
 </head>
 
 <body>
-    <header>
-    <header class="nav">
+<header>
+    <!-- Caja de navBar -->
+    <div class="nav">
         <input type="checkbox" id="nav-check">
-        <div class="nav-header">
+  
+    <div class="nav-header">
+        <!-- titulo-logo -->
         <div class="nav-title">
-            <img src="./img/sin fondo.png" alt="Logo" width="120">
+            <img src="./img/sin fondo.png" alt="logo" width="100">
         </div>
-        </div>
-        <div class="nav-btn">
+    </div>
+    <!--Nav botones -->
+    <div class="nab-btn">
         <label for="nav-check">
             <span></span>
             <span></span>
             <span></span>
         </label>
-        </div>
-<div class="navLinks">
-<a href="#" id="active">Inicio</a>
-<a href="./imagenes.html">Imágenes</a>
-<a href="./Informacion.html">Información</a>
-<a href="./contacto.html">Contacto</a>
+    </div>
+    <!-- botones uno por uno -->
+    <div class="nav-links">
+        <a href="#" id="active">Inicio</a>
+        <a href="./imagenes.html">Imágenes</a>
+        <a href="./Informacion.html">Información</a>
+        <a href="./contacto.html">Contacto</a>
+    </div>
 </div>
-
-<div class="banner-img">
-    
-</div>
-
-    </header>
+</header>
 
 
 
