--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
         <a href="./contacto.html">Contacto</a>
     </div>
 </div>
+<!-- caja banner -->
+<div class="banner-container">
+    <!-- botones segun animales -->
+    <div class="banner-botones">
+        <!-- texto arriba de los botones de animales -->
+        <h2>Ingresá en cada seccion para encontrar TODOS los PRODUCTOS relacionados a tu mascota</h2>
+        <section class="botones-animales">
+            <div class="perros-box">
+                <a href="./perros.htm"></a>
+                <h1>PERROS</h1>
+            </div>
+        </section>
+    </div>
+</div>
 </header>
 
 
