--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <a href="./perros.htm"></a>
                 <h1>PERROS</h1>
             </div>
+            <!-- continuar con cada seccion -->
         </section>
     </div>
 </div>
