--- a/index.html
+++ b/index.html
@@ -50,9 +50,25 @@
         <!-- texto arriba de los botones de animales -->
         <h2>Ingresá en cada seccion para encontrar TODOS los PRODUCTOS relacionados a tu mascota</h2>
         <section class="botones-animales">
+
             <div class="perros-box">
-                <a href="./perros.htm"></a>
+                <a href="./perros.htm"><img src="./img/perros-box1.png" alt="perros-boton" width="150"></a>
                 <h1>PERROS</h1>
+            </div>
+
+            <div class="gatos-box">
+                <a href="./html/gatos.html"> <img src="./img/gatos-box1.png" alt="gatos-boton" width="200"></a>
+                <h1>GATOS</h1>
+
+            </div>
+            <div class="peces-box">
+            <a href="./html/peces.html"> <img src="./img/peces-box1.png" alt="peces-boton" width="200"></a>
+            <h1>PECES</h1>
+            </div>
+
+            <div class="conejos-box">
+                <a href="./html/conejos.html"> <img src="./img/conejos-box1.png" alt="conejos-boton" width="230"></a>
+                <h1>CONEJOS</h1>
             </div>
             <!-- continuar con cada seccion -->
         </section>
