--- a/index.html
+++ b/index.html
@@ -53,29 +53,38 @@
 
             <div class="perros-box">
                 <a href="./perros.htm"><img src="./img/perros-box1.png" alt="perros-boton" width="150"></a>
-                <h1>PERROS</h1>
+            <div class="text-perro">
+            <h1>PERROS</h1>
+            </div>
             </div>
 
             <div class="gatos-box">
                 <a href="./html/gatos.html"> <img src="./img/gatos-box1.png" alt="gatos-boton" width="200"></a>
+                <div class="text-gato">
                 <h1>GATOS</h1>
-
+                </div>
             </div>
+
             <div class="peces-box">
             <a href="./html/peces.html"> <img src="./img/peces-box1.png" alt="peces-boton" width="200"></a>
+            <div class="text-peces">
             <h1>PECES</h1>
+            </div>
             </div>
 
             <div class="conejos-box">
                 <a href="./html/conejos.html"> <img src="./img/conejos-box1.png" alt="conejos-boton" width="230"></a>
+                <div class="text-conejos">
                 <h1>CONEJOS</h1>
+                </div>
             </div>
-            <!-- continuar con cada seccion -->
         </section>
     </div>
 </div>
 </header>
+<main>
 
+</main>
 
 
 
