--- a/index.html
+++ b/index.html
@@ -83,7 +83,22 @@
 </div>
 </header>
 <main>
-
+<div class="peluqueria-canina">
+    <h1>Peluquería Canina</h1>
+    <p>Desde hace mas de 30 años nos dedicamos a la peluquería canina. 
+        Realizamos cada trabajo como si fuera el único, con dedicación, amor, responsabilidad, respeto y con mucha pasión. 
+    </p>
+    <p>Realizamos cortes de raza, cortes personalizados, corte higiénico y de uñas.</p>
+    <p>Baños terapéuticos, baños antipulgas.</p>
+    <div class="lista-baño">
+        <ul>
+            <p>El baño incluye:</p>
+            <li>Corte higiénico</li>
+            <li>Corte de uñas</li>
+            <li>Limpieza de oidos y glandulas perianales</li>
+        </ul>
+    </div>
+</div>
 </main>
 
 
