--- a/index.html
+++ b/index.html
@@ -17,102 +17,26 @@
 
 <body>
 <header>
-    <!-- Caja de navBar -->
-    <div class="nav">
-        <input type="checkbox" id="nav-check">
-  
-    <div class="nav-header">
-        <!-- titulo-logo -->
-        <div class="nav-title">
-            <img src="./img/sin fondo.png" alt="logo" width="100">
-        </div>
-    </div>
-    <!--Nav botones -->
-    <div class="nab-btn">
-        <label for="nav-check">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
-    </div>
-    <!-- botones uno por uno -->
-    <div class="nav-links">
-        <a href="#" id="active">Inicio</a>
-        <a href="./imagenes.html">Imágenes</a>
-        <a href="./Informacion.html">Información</a>
-        <a href="./contacto.html">Contacto</a>
-    </div>
+    <!-- BARRA DE NAVEGACIÓN -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-3 border-bottom border-primary">
+<div class="container-fluid">
+    <!-- ACA ESTA EL LOGO DE LA MARCA -->
+    <a href="./index.html" class="navbar-brand"><img src="./img/4-sin-fondo.jpg" alt="logo" height="100"></a>
+    <!-- EL BOTON DESPLEGABLE -->
+    <button type="button" class="navbar-toggler"
+
 </div>
-<!-- caja banner -->
-<div class="banner-container">
-    <!-- botones segun animales -->
-    <div class="banner-botones">
-        <!-- texto arriba de los botones de animales -->
-        <h2>Ingresá en cada seccion para encontrar TODOS los PRODUCTOS relacionados a tu mascota</h2>
-        <section class="botones-animales">
-
-            <div class="perros-box">
-                <a href="./perros.htm"><img src="./img/perros-box1.png" alt="perros-boton" width="150"></a>
-            <div class="text-perro">
-            <h1>PERROS</h1>
-            </div>
-            </div>
-
-            <div class="gatos-box">
-                <a href="./html/gatos.html"> <img src="./img/gatos-box1.png" alt="gatos-boton" width="200"></a>
-                <div class="text-gato">
-                <h1>GATOS</h1>
-                </div>
-            </div>
-
-            <div class="peces-box">
-            <a href="./html/peces.html"> <img src="./img/peces-box1.png" alt="peces-boton" width="200"></a>
-            <div class="text-peces">
-            <h1>PECES</h1>
-            </div>
-            </div>
-
-            <div class="conejos-box">
-                <a href="./html/conejos.html"> <img src="./img/conejos-box1.png" alt="conejos-boton" width="230"></a>
-                <div class="text-conejos">
-                <h1>CONEJOS</h1>
-                </div>
-            </div>
-        </section>
-    </div>
-</div>
+</nav>
 </header>
+
 <main>
-<div class="peluqueria-canina">
-    <h1>Peluquería Canina</h1>
-    <p>Desde hace mas de 30 años nos dedicamos a la peluquería canina. 
-        Realizamos cada trabajo como si fuera el único, con dedicación, amor, responsabilidad, respeto y con mucha pasión. 
-    </p>
-    <p>Realizamos cortes de raza, cortes personalizados, corte higiénico y de uñas.</p>
-    <p>Baños terapéuticos, baños antipulgas.</p>
-    <div class="lista-baño">
-        <ul>
-            <p>El baño incluye:</p>
-            <li>Corte higiénico</li>
-            <li>Corte de uñas</li>
-            <li>Limpieza de oidos y glandulas perianales</li>
-        </ul>
-    </div>
-</div>
 </main>
 
 
 
 
 
-
-
-
-
-
-
-
-    <!-- JavaScript Bundle with Popper -->
+<!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
