agregando medios de pago

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <!-- caja navbar -->
+    <nav class="navbar navbar-expand-lg bg-light border-3 border-bottom border-top border-primary">
         <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"><img src="./img/4-sin-fondo.jpg" alt="logo" height="100"></a>
+            <!-- contiene logo con link a raiz -->
+        <a class="navbar-brand" href="./index.html"><img src="./img/sin fondo.png" alt="logo" height="100"></a>
+        <!-- menu desplegable -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,6 +53,13 @@
 </header>
 
 <main>
+    <!-- iniciar sesion y carrito -->
+<!-- banner de medios de pago -->
+<div class="medioPago"> 
+<h1>Medios de Pago</h1>
+</div>
+<!--carrusel  -->
+
 </main>
 
 
