--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claudia</title>
-    <!-- css -->
-    <link rel="stylesheet" href="./style.css">
-
+    
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<!--iconos-->
+<script src="https://kit.fontawesome.com/8b9ec16b87.js" crossorigin="anonymous"></script>
+<!-- css -->
+<link rel="stylesheet" href="./style.css">
 
     <!-- imagen pestaña -->
     <link rel="icon" href="./img/sin fondo.png">
@@ -58,7 +60,38 @@
 <div class="medioPago"> 
 <h1>Medios de Pago</h1>
 </div>
-<!--carrusel  -->
+<!--carousel  -->
+<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="1000">
+        <img src="./img/destacados/Screenshot_20221106-103614-180.png" class="d-block w-100" alt="..." height="100">
+      </div>
+      <div class="carousel-item" data-bs-interval="1000">
+        <img src="./img/destacados/Screenshot_20221106-103555-898.png" class="d-block w-100" alt="..." height="100">
+      </div>
+      <div class="carousel-item" data-bs-interval="1000">
+        <img src="./img/destacados/Screenshot_20221106-103541-601.png" class="d-block w-100" alt="..." height="100">
+      </div>
+      <div class="carousel-item" data-bs-interval="1000">
+        <img src="./img/destacados/Screenshot_20221106-103522-971.png" class="d-block w-100" alt="..." height="100">
+      </div>
+      <div class="carousel-item">
+        <img src="./img/destacados/Polish_20221030_173712132.png" class="d-block w-100" alt="..." height="100">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+
+
+
 
 </main>
 
@@ -66,7 +99,45 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
