--- a/index.html
+++ b/index.html
@@ -56,10 +56,82 @@
 
 <main>
     <!-- iniciar sesion y carrito -->
-<!-- banner de medios de pago -->
-<div class="medioPago"> 
-<h1>Medios de Pago</h1>
+<!-- carousel de medios de pago -->
+
+<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="2000">
+        <img src="./img/metodos-de-pago-1-1024x294.png" class="d-block w-100" alt="..." height="150">
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="./img/metodos-de-pago-1-1024x294.png" class="d-block w-100" alt="..." height="150">
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="./img/metodos-de-pago-1-1024x294.png" class="d-block w-100" alt="..." height="150">
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="./img/metodos-de-pago-1-1024x294.png" class="d-block w-100" alt="..." height="150">
+      </div>
+      <div class="carousel-item">
+        <img src="./img/metodos-de-pago-1-1024x294.png" class="d-block w-100" alt="..." height="150">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 </div>
+<!-- imagenes debajo del carousel -->
+<div class="cajapago">
+<div class="medioPago">
+    <img src="./img/medios de pago/AmericanExpressLogo.png" alt="">
+    <img src="./img/medios de pago/descarga.png" alt="">
+    <img src="./img/medios de pago/logo.png" alt="">
+    <img src="./img/medios de pago/logo_banconacion.png" alt="">
+    <img src="./img/medios de pago/logoCDNI.png" alt="">
+    <img src="./img/medios de pago/MasterCard_early_1990s_logo.png" alt="">
+    <img src="./img/medios de pago/mercado-pago-peru.jpg" alt="">
+    <img src="./img/medios de pago/Visa_Inc._logo.svg.png" alt="">
+</div>
+</div>
+
+
+<!-- para el fondo -->
+<div class="elFondo">
+    <!-- titulo de peluquera + redireccion -->
+<div class="tituloPeluqueria">
+<h1>Visitá nuestra galería completa</h1>
+<a href="./html/imagenes.html">click aquí</a>
+</div>
+<!-- peluqueria cuadricula de 6 imagenes  -->
+<div class="peluqueriaPrincipal">
+    <img src="./img/peluqueria/en pag principal/1.jpeg" alt="" width="300" height="300">
+    <img src="./img/peluqueria/en pag principal/2.jpeg" alt="" width="300" height="300">
+    <img src="./img/peluqueria/en pag principal/3.jpeg" alt="" width="300" height="300">
+    <img src="./img/peluqueria/en pag principal/312713646_164253762914000_5847896709155412703_n.jpg" alt="" width="300" height="300">
+    <img src="./img/peluqueria/en pag principal/4.jpeg" alt="" width="300" height="300">
+    <img src="./img/peluqueria/en pag principal/5.jpeg" alt="" width="300" height="300">
+    <img src="./img/peluqueria/en pag principal/6.jpeg" alt="" width="300" height="300">
+    <img src="./img/peluqueria/en pag principal/7.jpeg" alt="" width="300" height="300">
+    <img src="./img/peluqueria/en pag principal/8.jpeg" alt="" width="300" height="300">
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 <!--carousel  -->
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
@@ -88,6 +160,9 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+
+  
 
 
 
