--- a/index.html
+++ b/index.html
@@ -106,21 +106,23 @@
     <!-- titulo de peluquera + redireccion -->
 <div class="tituloPeluqueria">
 <h1>Visitá nuestra galería completa</h1>
-<a href="./html/imagenes.html">click aquí</a>
+<a href="./html/imagenes.html">Imágenes</a>
 </div>
 <!-- peluqueria cuadricula de 6 imagenes  -->
+<div class="container-imagenes">
 <div class="peluqueriaPrincipal">
-    <img src="./img/peluqueria/en pag principal/1.jpeg" alt="" width="300" height="300">
-    <img src="./img/peluqueria/en pag principal/2.jpeg" alt="" width="300" height="300">
-    <img src="./img/peluqueria/en pag principal/3.jpeg" alt="" width="300" height="300">
-    <img src="./img/peluqueria/en pag principal/312713646_164253762914000_5847896709155412703_n.jpg" alt="" width="300" height="300">
-    <img src="./img/peluqueria/en pag principal/4.jpeg" alt="" width="300" height="300">
-    <img src="./img/peluqueria/en pag principal/5.jpeg" alt="" width="300" height="300">
-    <img src="./img/peluqueria/en pag principal/6.jpeg" alt="" width="300" height="300">
-    <img src="./img/peluqueria/en pag principal/7.jpeg" alt="" width="300" height="300">
-    <img src="./img/peluqueria/en pag principal/8.jpeg" alt="" width="300" height="300">
+    <img src="./img/peluqueria/en pag principal/1.jpeg" alt="" width="250" height="250">
+    <img src="./img/peluqueria/en pag principal/2.jpeg" alt="" width="250" height="250">
+    <img src="./img/peluqueria/en pag principal/3.jpeg" alt="" width="250" height="250">
+    <img src="./img/peluqueria/en pag principal/312713646_164253762914000_5847896709155412703_n.jpg" alt="" width="250" height="250">
+    <img src="./img/peluqueria/en pag principal/5.jpeg" alt="" width="250" height="250">
+    <img src="./img/peluqueria/en pag principal/6.jpeg" alt="" width="250" height="250">
+    <img src="./img/peluqueria/en pag principal/7.jpeg" alt="" width="250" height="250">
+    <img src="./img/peluqueria/en pag principal/8.jpeg" alt="" width="250" height="250">
+    <img src="./img/peluqueria/en pag principal/WhatsApp Image 2022-11-08 at 18.51.28.jpeg" alt="" width="250" height="250">
 </div>
 </div>
+
 
 
 
